# OpenSignal-ITS

./: .gitignore  AGENT_CONTEXT.json  GROK_ONBOARDING_PROMPT.md  OpenSignal ITS - Project Context.md  PROJECT_CONTEXT.md  README.md  main.py  oid_monitor_long.py  package-lock.json  package.json  playwright.config.cjs  pyproject.toml  rxconfig.py  traffic.db-shm  traffic.db-wal
.github/workflows/: ci.yml
docs/: NTCIP_1202_KEY_OBJECTS.json  operations-runbook.md  polling-rtsp-dms-phase0-baseline.md  polling-rtsp-dms-roadmap.md  preproduction-ui-dualtrack-plan.md  sprint1-device-registry-plan.md  ubuntu-development-setup.md  ui-architecture-blueprint.md  ui-label-glossary.md  ui-release-notes-draft.md  user_workflow_guide.md
opensignal_its/: OpenSignal ITS - Project Context.md  PROJECT_CONTEXT.md  opensignal_its.py  polling_telemetry.py
opensignal_its/components/: device_card.py  phase_status.py
opensignal_its/db/: __init__.py  audit_store.py
opensignal_its/devices/: __init__.py  base.py  siemens_m60.py  skyline_dms_emulator.py
opensignal_its/docs/: M60_OID_REFERENCE.json  m60_oid_table.json
opensignal_its/models/: __init__.py  device.py  event.py  fleet.py  media.py
opensignal_its/protocols/: __init__.py  rtsp.py  snmp.py
opensignal_its/services/: __init__.py  alert_dispatch_service.py  auth_service.py  command_catalog.py  command_service.py  event_service.py  (+11 more)
scripts/: agent_handoff_broker.py  launch.sh  probe_signal_controller_snmp.py  reflex_boot_smoke.py  reflex_playwright_smoke.py  run_development_broker.sh  run_planning_broker.sh  setup_ubuntu.sh
(+51 files in other folders)
