[project]
name = "opensignal_its"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiortc>=1.14.0",
    "apscheduler>=3.11.2",
    "folium>=0.20.0",
    "opencv-python-headless>=4.13.0.92",
    "pydantic>=2.13.4",
    "pysnmp>=7.1.27",
    "python-dotenv>=1.2.2",
    "reflex>=0.9.2.post1",
]
